--- a/table/table-style.css
+++ b/table/table-style.css
@@ -7,7 +7,7 @@ td {
 }
 
 body {
-    background-image: url(img/dbd背景.jpg);
+    background-image: url(img/背景.jpg);
     background-size: contain;
 }
 
